RESOLVED FIXED168419
[GTK] Images are never read from the clipboard
https://bugs.webkit.org/show_bug.cgi?id=168419
Summary [GTK] Images are never read from the clipboard
Carlos Garcia Campos
Reported 2017-02-16 03:45:37 PST
We write them, bu we don't read them. This is the reason why test editing/pasteboard/paste-image-using-image-data.html fails.
Attachments
Patch (6.35 KB, patch)
2017-02-16 03:50 PST, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2017-02-16 03:50:21 PST
Sergio Villar Senin
Comment 2 2017-02-16 04:04:26 PST
Comment on attachment 301737 [details] Patch Nice catch!
Carlos Garcia Campos
Comment 3 2017-02-16 04:10:42 PST
Note You need to log in before you can comment on or make changes to this bug.