Source/WebCore/platform/gtk/PasteboardHelper.cpp
@@ -23,6 +23,7 @@
 #include "config.h"
 #include "PasteboardHelper.h"
 
+#include "BitmapImage.h"
 #include "GtkVersioning.h"
 #include "SelectionData.h"
 #include <gtk/gtk.h>
@@ -112,6 +113,16 @@ void PasteboardHelper::getClipboardContents(GtkClipboard* clipboard, SelectionDa
             gtk_selection_data_free(data);
         }
     }
+
+#ifndef GTK_API_VERSION_2
+    if (gtk_clipboard_wait_is_image_available(clipboard)) {
+        if (GRefPtr<GdkPixbuf> pixbuf = adoptGRef(gtk_clipboard_wait_for_image(clipboard))) {
+            RefPtr<cairo_surface_t> surface = adoptRef(gdk_cairo_surface_create_from_pixbuf(pixbuf.get(), 1, nullptr));
+            Ref<Image> image = BitmapImage::create(WTFMove(surface));
+            selection.setImage(image.ptr());
+        }
+    }
+#endif
 
     selection.setCanSmartReplace(gtk_clipboard_wait_is_target_available(clipboard, smartPasteAtom));
 }
